website: automatically adjust home-section height to prevent white spaces

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -357,8 +357,8 @@ body {
   display: flex;
 }
 
-.result_black_chip {
-  background-color: #000000;
+.result_header_chip {
+  background-color: #11101D;
   border-radius: 15px;
   transition: transform .2s;
   align-items: center;
